fix volume button bottom alignment

--- a/src/styles/Player.module.css
+++ b/src/styles/Player.module.css
@@ -214,6 +214,7 @@
 .volume-container svg {
   height: 2.6rem;
   width: auto;
+  display: block;
 }
 
 /* Volume range input styles */
